Bunch of Fixes from no-internet-wednesday.

--- a/application/views/scripts/item/index.phtml
+++ b/application/views/scripts/item/index.phtml
@@ -356,5 +356,5 @@
 	</script>
 	<? endif ?>
 	<script type="text/javascript" src="/js/calc.js"></script>
-	<script type="text/javascript" src="/js/fullbrowser.js"></script>
+	<script type="text/javascript" src="/js/browser.js"></script>
 <? endif ?>
