--- a/application/views/scripts/item/bazaar.phtml
+++ b/application/views/scripts/item/bazaar.phtml
@@ -414,6 +414,6 @@
 		} ?>
 	</script>
 	<? endif ?>
-	<script type="text/javascript" src="/js/fullcalc.js"></script>
-	<script type="text/javascript" src="/js/fullbrowser.js"></script>
+	<script type="text/javascript" src="/js/calc.js"></script>
+	<script type="text/javascript" src="/js/browser.js"></script>
 <? endif ?>
