Added a missing skill (Cluster Arrow).
Really need to refactor all of those into one list...

--- a/application/views/scripts/item/bazaar.phtml
+++ b/application/views/scripts/item/bazaar.phtml
@@ -156,6 +156,7 @@
 							<option label="Maximum Fury" value="fury-max">Maximum Fury</option>
 							<option label="Increases Hatred Regeneration" value="hatred-regen">Increases Hatred Regeneration</option>
 							<option label="Maximum Discipline" value="max-discipline">Maximum Discipline</option>
+							<option label="Reduces resource cost of Cluster Arrow" value="dh-cluster-arrow">Reduces resource cost of Cluster Arrow</option>
 							<option label="Reduces resource cost of Chakram" value="dh-chakram">Reduces resource cost of Chakram</option>
 							<option label="Increases Evasive Fire damage" value="dh-evasive-fire">Increases Evasive Fire damage</option>
 							<option label="Increases Grenades Damage" value="dh-grenades">Increases Grenades Damage</option>
