--- a/application/views/scripts/record/build.phtml
+++ b/application/views/scripts/record/build.phtml
@@ -198,6 +198,7 @@
 		</div>
 		<div id="tab-ehp">
 			<ul id="stats-ehp"><li>test</li></ul>
+			<ul id="stats-ehp-gear"></ul>
 		</div>
 	</div>
 </div>
