--- a/application/views/scripts/user/_shop-interface.phtml
+++ b/application/views/scripts/user/_shop-interface.phtml
@@ -93,6 +93,7 @@
 	<ul>
 		<li><a href="#tab-shop">For Sale</a></li>
 		<li><a href="#tab-complete">Completed</a></li>
+		<li><a href="#tab-all-complete">All Completed Sales</a></li>
 		<li><a href="#tab-help">What is this?</a></li>
 	</ul>
 	<div id="tab-shop">
@@ -100,6 +101,9 @@
 	</div>
 	<div id="tab-complete">
 		<?= $this->render("./user/shop/completed.phtml") ?>
+	</div>
+	<div id="tab-all-complete">
+		<?= $this->render("./user/shop/all-completed.phtml") ?>
 	</div>
 	<div id="tab-help">
 		<?= $this->render("./user/shop/help.phtml") ?>
