Switched back to calc

--- a/application/views/scripts/record/build.phtml
+++ b/application/views/scripts/record/build.phtml
@@ -211,7 +211,7 @@
 	</fieldset>
 	</form>
 </div>
-<script type="text/javascript" src="/js/fullcalc.js"></script>
+<script type="text/javascript" src="/js/calc.js"></script>
 <script type="text/javascript">
 calc(".equipped a");
 $("#character").tabs({
