Reordered the screen for creating items.

--- a/application/views/scripts/user/_shop-interface.phtml
+++ b/application/views/scripts/user/_shop-interface.phtml
@@ -366,11 +366,11 @@
 				<p class='alert'>The "Taking Offers" sell method allows other users to offer amounts to you for the item.</p>
 			</div>
 			<div id="method-ah" class="sellMethod">
-				<p>What did you post as the buyout?</p>
-				<input name="ahBuyout" type="textbox" id="soldBuyout"/>
-				<p>What did you post as the minimum bid?</p>
+				<p><strong>Minimum Bid</strong></p>
 				<input name="ahBid" type="textbox" id="soldMinBid"/>
-				<p class='alert'>By choosing this option, your auction will not appear in the bazaar, but will appear in your "My Store" page. The purpose of this feature is so that you can log which items you've sold and for how much.</p>
+				<p><strong>Buyout</strong></p>
+				<input name="ahBuyout" type="textbox" id="soldBuyout"/>
+				<!-- <p class='alert'>By choosing this option, your auction will not appear in the bazaar, but will appear in your "My Store" page. The purpose of this feature is so that you can log which items you've sold and for how much.</p> -->
 			</div>
 			<p id="postSaleButton"><button id="postSale" class="ui-button ui-widget ui-state-default ui-corner-all ui-button-text-only gear-change" aria-disabled="false"><span class="ui-button-text">List Item</span></button></p>
 		</form>
